--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -469,7 +469,7 @@
         "on": "Recording",
         "pending": "Preparing to record the meeting...",
         "rec": "REC",
-        "serviceDescription": "Your recording will be saved by the recording service",
+        "serviceDescription": "Your recording will automatically be saved in your Belouga profile.",
         "serviceName": "Recording service",
         "signIn": "Sign in",
         "signOut": "Sign out",
