--- a/lang/main.json
+++ b/lang/main.json
@@ -204,6 +204,7 @@
         "e2eeWarning": "WARNING: Not all participants in this conference seem to have support for End-to-End encryption. If you enable it they won't be able to see nor hear you.",
         "enterDisplayName": "Please enter your name here",
         "error": "Error",
+        "forceLeave": "There are no longer any moderators in this conference, so this session has ended!",
         "gracefulShutdown": "Our service is currently down for maintenance. Please try again later.",
         "grantModeratorDialog": "Are you sure you want to make this participant a moderator?",
         "grantModeratorTitle": "Grant moderator",
