Update label text and various icons

--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -239,8 +239,8 @@
         "remoteControlTitle": "Remote desktop control",
         "Remove": "Remove",
         "removePassword": "Remove $t(lockRoomPassword)",
-        "removeSharedVideoMsg": "Are you sure you would like to remove your shared video?",
-        "removeSharedVideoTitle": "Remove shared video",
+        "removeSharedVideoMsg": "Are you sure you would like to stop the YouTube video?",
+        "removeSharedVideoTitle": "Stop YouTube video",
         "reservationError": "Reservation system error",
         "reservationErrorMsg": "Error code: {{code}}, message: {{msg}}",
         "retry": "Retry",
