--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -232,8 +232,8 @@
         "remoteControlTitle": "Remote desktop control",
         "Remove": "Remove",
         "removePassword": "Remove password",
-        "removeSharedVideoMsg": "Are you sure you would like to remove your shared video?",
-        "removeSharedVideoTitle": "Remove shared video",
+        "removeSharedVideoMsg": "Are you sure you would like to stop the YouTube video?",
+        "removeSharedVideoTitle": "Stop YouTube video",
         "reservationError": "Reservation system error",
         "reservationErrorMsg": "Error code: {{code}}, message: {{msg}}",
         "retry": "Retry",
