[FEATURE] Implement Network Compatibility Mode

--- a/lang/main-esUS.json
+++ b/lang/main-esUS.json
@@ -18,7 +18,7 @@
         "linkCopied": "Link copiado al portapapeles",
         "loading": "Buscando por contacto y número telefónico",
         "loadingNumber": "Validando el número telefónico",
-        "loadingPeople": "Buscando contactos a invitar",        
+        "loadingPeople": "Buscando contactos a invitar",
         "noResults": "No se encontraron coincidencias",
         "noValidNumbers": "Por favor ingrese un número de teléfono",
         "outlookEmail": "Correo de Outlook",
@@ -196,6 +196,9 @@
         "done": "Listo",
         "e2eeDescription": "El cifrado Extremo-a-Extremo es actualmente EXPERIMENTAL. Tenga en cuenta que activar el cifrado extremo-a-extremo puede deshabilitar servicios en el servidor como: grabación, transmisión en vivo y participación telefónica. Sin embargo tenga en cuenta que esta reunion solo funcionará con personas que se unan usando un navegador.",
         "e2eeWarning": "ATENCION: No todos los participantes de esta reunión soportan cifrado Extremo-a-Extremo. Si usted habilita el cifrado ellos no podrán verlo ni oirlo.",
+        "enableNetworkCompat": "¿Habilitar el modo de compatibilidad de red?",
+        "enableNetworkCompatButton": "Activar el modo de compatibilidad de red",
+        "enableNetworkCompatInfo": "El modo de compatibilidad de red es un modo especial que puede habilitar si ha tenido problemas con desconexiones o si las cámaras y los micrófonos no se pueden encender. Esto es principalmente útil para sesiones más grandes. Al activar esta configuración, se habilitará para todos en la sala y se deshabilitará la calidad HD, por lo que solo debe usarla si ha tenido problemas.",
         "enterDisplayName": "Por favor ingresa tu nombre aquí",
         "error": "Error",
         "externalInstallationMsg": "Necesita instalar nuestra extensión para compartir escritorio.",
@@ -673,6 +676,7 @@
             "moreOptions": "Mostrar más opciones",
             "mute": "Alternar silenciar audio",
             "muteEveryone": "Silenciar a todos",
+            "networkCompat": "Modo de compatibilidad de red",
             "pip": "Alternar modo de imagen en imagen",
             "privateMessage": "Enviar un mensaje privado",
             "profile": "Editar el perfil",
@@ -720,6 +724,8 @@
         "moreOptions": "Más opciones",
         "mute": "Activar o silenciar el micrófono",
         "muteEveryone": "Silenciar a todos",
+        "networkCompatOn": "Habilitar el modo de compatibilidad de red",
+        "networkCompatOff": "Deshabilitar el modo de compatibilidad de red",
         "noAudioSignalTitle": "¡No hay ninguna entrada que provenga de su micrófono!",
         "noAudioSignalDesc": "Si no lo silenció intencionalmente desde la configuración del sistema o el hardware, considere la posibilidad de cambiar el dispositivo.",
         "noAudioSignalDescSuggestion": "Si no lo silenció intencionalmente desde la configuración del sistema o el hardware, considere utilizar el siguiente dispositivo:",
