--- a/lang/main.json
+++ b/lang/main.json
@@ -199,6 +199,9 @@
         "e2eeDescription": "End-to-End Encryption is currently EXPERIMENTAL. Please keep in mind that turning on end-to-end encryption will effectively disable server-side provided services such as: recording, live streaming and phone participation. Also keep in mind that the meeting will only work for people joining from browsers with support for insertable streams.",
         "e2eeLabel": "Enable End-to-End Encryption",
         "e2eeWarning": "WARNING: Not all participants in this meeting seem to have support for End-to-End encryption. If you enable it they won't be able to see nor hear you.",
+        "enableNetworkCompat": "Enable Network Compatibility Mode?",
+        "enableNetworkCompatButton": "Turn on Network Compatibility Mode",
+        "enableNetworkCompatInfo": "Network compatibility mode is a special mode you can enable if you have been having problems with disconnections or cameras and microphones not being able to turn on. This is mainly useful for larger sessions. Turning this setting on will enable it for everyone in the room and disable HD quality, so only use this if you have been experiencing issues.",
         "enterDisplayName": "Please enter your name here",
         "error": "Error",
         "forceLeave": "There are no longer any moderators in this conference, so this session has ended!",
@@ -549,7 +552,7 @@
         "linkCopied": "Link copied to clipboard",
         "lookGood": "It sounds like your microphone is working properly",
         "or": "or",
-        "premeeting": "Pre conference",
+        "premeeting": "Conference",
         "showScreen": "Enable pre-conference screen",
         "startWithPhone": "Start with phone audio",
         "screenSharingError": "Screen sharing error:",
@@ -710,6 +713,7 @@
             "moreOptions": "Show more options",
             "mute": "Toggle mute audio",
             "muteEveryone": "Mute everyone",
+            "networkCompat": "Network Comaptibility Mode",
             "pip": "Toggle Picture-in-Picture mode",
             "privateMessage": "Send private message",
             "profile": "Edit your profile",
@@ -760,6 +764,8 @@
         "moreOptions": "More options",
         "mute": "Mute / Unmute",
         "muteEveryone": "Mute everyone",
+        "networkCompatOn": "Enable Network Compatibility Mode",
+        "networkCompatOff": "Disable Network Compatibility Mode",
         "noAudioSignalTitle": "There is no input coming from your mic!",
         "noAudioSignalDesc": "If you did not purposely mute it from system settings or hardware, consider switching the device.",
         "noAudioSignalDescSuggestion": "If you did not purposely mute it from system settings or hardware, consider switching to the suggested device.",
