--- a/lang/main.json
+++ b/lang/main.json
@@ -863,6 +863,8 @@
         "mute": "Participant is muted",
         "muted": "Muted",
         "remoteControl": "Start / Stop remote control",
+        "remoteControlStart": "Start remote control",
+        "remoteControlStop": "Stop remote control",
         "show": "Show on stage",
         "videomute": "Participant has stopped the camera"
     },
